--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,5 +21,5 @@ jobs:
       - run: cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
       - run: yarn --version
       - name: Run CI checks
-        working-directory: ./pet-store-client
+        working-directory: ./pet-store-java-client
         run: ./gradlew check
