--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,6 +1,6 @@
 version: 2
 updates:
-  - package-ecosystem: "java:gradle"
+  - package-ecosystem: "gradle"
     directory: "/{{cookiecutter.component_id}}"
     schedule:
       interval: "daily"
