DTSPO-1792 - update readme and build.gradle with jitpack config

--- a/{{cookiecutter.component_id}}/build.gradle
+++ b/{{cookiecutter.component_id}}/build.gradle
@@ -13,6 +13,9 @@ repositories {
     maven {
         url = 'http://repo.maven.apache.org/maven2'
     }
+    maven { 
+        url "https://jitpack.io" 
+    }
 }
 
 dependencies {
