--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,6 +18,7 @@ jobs:
         with: 
           java-version: 1.8
       - run: sudo snap install --edge cookiecutter
+      - run: sudo apt install openjdk-11-jdk wget
       - run: cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
       - run: yarn --version
       - name: Run CI checks
