--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,7 +18,8 @@ jobs:
         with: 
           java-version: 11
       - run: sudo snap install --edge cookiecutter
-      - run: cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
+      - run: wget https://jitpack.io/com/github/hmcts/idam-java-client/master/build.log
+      - run: sudo cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
       - run: yarn --version
       - name: Run CI checks
         working-directory: ./pet-store-java-client
