--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,16 +10,15 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with: 
           java-version: 11
-      - run: sudo snap install --edge cookiecutter
-      - run: wget https://jitpack.io/com/github/hmcts/idam-java-client/master/build.log
-      - run: sudo cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
+      - run: sudo apt-get install cookiecutter
+      - run: cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
       - run: yarn --version
       - name: Run CI checks
         working-directory: ./pet-store-java-client
