--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,11 +13,11 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v1
-      - name: Set up JDK 8
+      - name: Set up JDK 11
         uses: actions/setup-java@v1
-        with: 
-          java-version: 1.8
-      - run: sudo apt-get install cookiecutter
+        with:
+          java-version: 11
+      - run: sudo apt-get update && sudo apt-get install cookiecutter
       - run: cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
       - run: yarn --version
       - name: Run CI checks
