DTSPO-1875 - add jitpack

--- a/{{cookiecutter.component_id}}/build.gradle
+++ b/{{cookiecutter.component_id}}/build.gradle
@@ -9,10 +9,13 @@ plugins {
 
 repositories {
     mavenLocal()
-    jcenter()
     maven {
         url = 'http://repo.maven.apache.org/maven2'
     }
+    maven { 
+        url "https://jitpack.io" 
+    }
+    jcenter()
 }
 
 dependencies {
