--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,16 +10,17 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 8
-        uses: actions/setup-java@v1
-        with: 
-          java-version: 1.8
-      - run: sudo apt-get install cookiecutter
-      - run: cookiecutter ../template-java-client/ --no-input --config-file ../template-java-client/cookiecutter-ci.yaml
-      - run: yarn --version
-      - name: Run CI checks
-        working-directory: ./pet-store-java-client
-        run: ./gradlew check
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          cache: 'gradle'
+      # TODO add some CI here
+      # see https://github.com/backstage/backstage/issues/6568
+
+      # - name: Run CI checks
+      #   working-directory: ./pet-store-java-client
+      #   run: ./gradlew check
