--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -31,8 +31,8 @@ version buildNumber
 description = '${{ values.description}}'
 
 allprojects {
-    sourceCompatibility = 11
-    targetCompatibility = 11
+    sourceCompatibility = 17
+    targetCompatibility = 17
 }
 
 def gitRepo = "https://github.com/hmcts/${{ values.app_full_name}}"
@@ -51,12 +51,14 @@ def pomConfig = {
     }
 }
 
-task sourcesJar(type: Jar, dependsOn: classes) {
+tasks.register('sourcesJar', Jar) {
+    dependsOn classes
     getArchiveClassifier().set('sources')
     from sourceSets.main.allSource
 }
 
-task javadocJar(type: Jar, dependsOn: javadoc) {
+tasks.register('javadocJar', Jar) {
+    dependsOn javadoc
     getArchiveClassifier().set('javadoc')
     from javadoc.destinationDir
 }
