--- a/skeleton/build.gradle
+++ b/skeleton/build.gradle
@@ -23,11 +23,10 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.0'
 }
 
-group = '${{ values.group_id}}'
-
 def buildNumber = System.getenv("RELEASE_VERSION")?.replace("refs/tags/", "") ?: "DEV-SNAPSHOT"
-version buildNumber
 
+group = '${{ values.group_id}}'
+version = buildNumber
 description = '${{ values.description}}'
 
 allprojects {
@@ -69,9 +68,9 @@ publishing {
             from components.java
             artifact sourcesJar
             artifact javadocJar
-            groupId project.group
-            artifactId '${{ values.artifact_id}}'
-            version project.version
+            groupId = project.group
+            artifactId = '${{ values.artifact_id}}'
+            version = project.version
 
             pom.withXml {
                 def root = asNode()
